<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/stacked_green">
    
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="79dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/rights"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/e_task_image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/emanage_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/e_task_image"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="27dp"
            android:text="@string/version"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
    

</RelativeLayout>
